--- a/views/entry/blank.ejs
+++ b/views/entry/blank.ejs
@@ -119,22 +119,22 @@
 
 
 
-<img style="border-radius: 100%;width: 100px;margin-left:4%;position: relative;z-index: 99; " src="/avatar.jpg" >
+<img style="border-radius: 100%;width: 100px;margin-left:4%;position: relative;z-index: 99; " src="https://lh3.googleusercontent.com/mCjQ-5rtTobtuBY6hTCafXV0JuHI0p5YWswsoabs1HHrTynVAmZvCbWKBNsxG7bcIeiCgrnZX5eVpw=w940-h939-rw-no" >
 
 </div>
 
     <div class="col-sm-8" style=" font-size: 1em;color: white;">
 <b>
 <p style="font-weight:; font-size: 1.5em ;">   	
-Nyasha Nyashanu
+Amon Mustauri
 </b>
 </p>
-          <p style="font-weight:; font-size: 0.8em ;">  
+        <!--  <p style="font-weight:; font-size: 0.8em ;">  
            Software Engineer Student @UCT 
    <b>       <br> Harare Zimbabwe
 <br>
 
-          </p>
+          </p> -->
 </b>
          
 
