--- a/views/home.ejs
+++ b/views/home.ejs
@@ -167,6 +167,11 @@ div.tab button.active {
     border-top: none;
     color: white;
 }
+a{
+  padding-top: 300px;
+  font-size:2em;
+  text-decoration: none; 
+}
 </style>
 
 
@@ -182,8 +187,10 @@ div.tab button.active {
 
 
 
-<div align="center" style="width: 100%;min-height: 500px;" >
+<div align="center" style="width: 100%;" >
 <a href="/analyze">Intenal demo routes</a>
+<a href="/entry">My Posts</a>
+
 
 
 
